--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
     <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -29,39 +31,62 @@
                 <input type="submit" class="input_sub" value="登 录">
             </form>
         </div>
+    </div>
 
-    </div> 
-<script>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="width: 300px;margin: 0 auto;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    账号或密码错误
+                </div>
+            </div>
+        </div>
+    </div>
 
- $(function(){
-     $('.input_sub').on('click',function(e){
-         e.preventDefault();
-        var userName=$('.input_txt').val();
-        var passWord=$('.input_pass').val();
-         if (!userName||!passWord) {
-             alert('账号或密码不能为空');
-         }else{
-             $.ajax({
-                 type:'post',
-                 url:'http://localhost:8080/admin/user/login',
-                 data:{
-                    username:userName,
-                    password:passWord
-                 },
-                 success:function(backData){
-                     if (backData.code==200) {
-                         window.location.href='index.html';
-                     }else{
-                         alert('账号或密码错误!'); 
-                     }
-                    
-                 }
-             });
-         }
-     })
-});
 
-</script>
+    <script>
+
+        $(function () {
+            $('.input_sub').on('click', function (e) {
+                e.preventDefault();
+                var userName = $('.input_txt').val();
+                var passWord = $('.input_pass').val();
+                if (!userName || !passWord) {
+                    $('#myModal .modal-body').text('账号或密码不能为空');
+                    $('#myModal').modal({
+                        keyboard: true,
+                    })
+                } else {
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/user/login',
+                        data: {
+                            username: userName,
+                            password: passWord
+                        },
+                        success: function (backData) {
+                            if (backData.code == 200) {
+                                window.location.href = 'index.html';
+                            } else {
+                                $('#myModal .modal-body').text(' 账号或密码错误');
+                                $('#myModal').modal({
+                                    keyboard: true,
+                                })
+                            }
+
+                        }
+                    });
+                }
+            })
+        });
+
+    </script>
 </body>
 
 </html>
