--- a/web_back/user.html
+++ b/web_back/user.html
@@ -45,10 +45,9 @@
                     <div class="col-sm-10">
                         <img src="images/2.jpg" alt="" class="user_pic"> <br>
                         <label for="exampleInputFile">
-                            <img src="./images/uploadFileIcon.png" alt="">
+                            <img src="./images/uploadFileIcon.png" alt="" style="width: 32px; cursor:pointer;">
+                            <input type="file" style="display: none" name="userPic" id="exampleInputFile">
                         </label>
-                        <!-- 一般工作中不用整个默认的上传文件的标签,因为太丑,隐藏 -->
-                        <input type="file" style="display: none" name="userPic" id="exampleInputFile">
                     </div>
                 </div>
 
@@ -72,29 +71,9 @@
     <script>
         // 入口函数
         $(function () {
-            // 需求:个人中心图片预览
-            // 1.给input:file这个选择图片文件的标签一个change事件.
-            $('#exampleInputFile').on('change', function () {
-                // 2.通过files[0]来获取当前选中的这个图片文件
-                var fileIcon = this.files[0];
-                // 3.通过URL.createObjectURL来创建一个url
-                var url = URL.createObjectURL(fileIcon);
-                // 4.把这url赋值给显示图片的src属性
-                $('.user_pic').attr('src', url);
-            });
-
-            //需求: 一进到这个页面,就获取当前登录的这个用户的详细信息.展示在当前这个页面对应的标签中.
             $.ajax({
                 url: 'http://localhost:8080/admin/user/detail',
                 success: function (backData) {
-                    // console.log(backData);
-                    //把获取到的数据,展示在对应的标签上
-                    // $('input.username').val(backData.data.username);
-                    // $('input.nickname').val(backData.data.nickname);
-                    // $('input.email').val(backData.data.email);
-                    // $('input.password').val(backData.data.password);
-
-                    //把上面4句代码做一个简化, forin获取到的数据对象
                     for (var key in backData.data) {
                         $('input.' + key).val(backData.data[key]);
                     }
@@ -103,13 +82,15 @@
                 }
             });
 
-            // 需求:修改个人中心信息
-            //1.给修改按钮注册点击事件.
+            $('#exampleInputFile').on('change', function () {
+                var file = this.files[0];
+                var url = URL.createObjectURL(file);
+               $('.user_pic').attr('src', url);
+            });
+
             $('.btn-edit').on('click', function (e) {
                 e.preventDefault();
-                //2.通过formData获取要修改的信息
                 var fd = new FormData($('form')[0]);
-                //3.发送ajax请求,完成修改
                 $.ajax({
                     type: 'post',
                     url: 'http://localhost:8080/admin/user/edit',
@@ -119,29 +100,27 @@
                     success: function (backData) {
                         if (backData.code == 200) {
                             alert('修改成功');
-                            //解决方案一: 刷新父窗口.
-                            //window.location.href = 'index.html';//这样不对,这样写的话会让iframe显示整个首页.
-                            //parent.window.location.reload();
+                            parent.window.location.reload();
 
                             //解决方案二: 再重新发送ajax请求,获取修改后的用户信息,显示在首页对应的标签上.
-                            $.ajax({
-                                type: 'get',
-                                url: 'http://localhost:8080/admin/user/info',
-                                success: function (backData) {
-                                    if (backData.code == 200) {
-                                        // ​2.把对应的信息显示在页面的对象标签上.
-                                        parent.$('.user_info>span').html(
-                                            '欢迎&nbsp;&nbsp;' + backData.data
-                                            .nickname);
-                                        parent.$('.user_info>img').attr('src',
-                                            backData
-                                            .data.userPic);
-                                        parent.$('.user_center_link>img').attr(
-                                            'src',
-                                            backData.data.userPic);
-                                    }
-                                }
-                            });
+                            // $.ajax({
+                            //     type: 'get',
+                            //     url: 'http://localhost:8080/admin/user/info',
+                            //     success: function (backData) {
+                            //         if (backData.code == 200) {
+                            //             // ​2.把对应的信息显示在页面的对象标签上.
+                            //             parent.$('.user_info>span').html(
+                            //                 '欢迎&nbsp;&nbsp;' + backData.data
+                            //                 .nickname);
+                            //             parent.$('.user_info>img').attr('src',
+                            //                 backData
+                            //                 .data.userPic);
+                            //             parent.$('.user_center_link>img').attr(
+                            //                 'src',
+                            //                 backData.data.userPic);
+                            //         }
+                            //     }
+                            // });
                         }
                     }
                 });
