--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -63,7 +63,7 @@
                         <td>爱旅行</td>
                         <td>travel</td>
                         <td class="text-center">
-                            <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;爱旅行&quot;});"
+                            <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;&quot;});"
                                 class="btn btn-info btn-xs">编辑</a>
                             <a href="javascript:deleteTr( 4 );" class="btn btn-danger btn-xs">删除</a>
                         </td>
@@ -80,56 +80,142 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control articleName" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control articleSlug" id="recipient-name">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
-          $('#addModal').modal({
-            show:false,
-            backdrop:false
-          });
+    <script src="./js/template-web.js"></script>
 
-          $('#model_shutoff').click(function(){
-            alert('shutoff');
+    <!-- 获取全部类别模板 -->
+    <script id="class-list" type="text/html">
+        {{each data v}}
+        <tr>
+            <td>{{v.name}}</td>
+            <td>{{v.slug}}</td>
+            <td class="text-center">
+                <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;&quot;});"
+                    class="btn btn-info btn-xs">编辑</a>
+                <a href="#" data-id="{{v.id}}" class="btn btn-danger btn-xs btn-del">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+
+    <!-- 添加类别模板 -->
+    <script id="addClass" type="text/html">
+        <tr>
+            <td>{{name}}</td>
+            <td>{{slug}}</td>
+            <td class="text-center">
+                <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;&quot;});"
+                    class="btn btn-info btn-xs">编辑</a>
+                <a href="#"  class="btn btn-danger btn-xs">删除</a>
+            </td>
+        </tr>
+    </script>
+
+    <script>
+        $('#addModal').modal({
+            show: false,
+            backdrop: false
+        });
+
+        $('#model_shutoff').click(function () {
             $('#addModal').modal('hide');
-          });
+        });
 
-          $('#model_add').click(function(){
-            alert('add');
-            $('#addModal').modal('hide');
-          });
-
-          $('.category_table').delegate('a','click',function(){
-              if($(this).hasClass('btn-info')){
+        $('.category_table').delegate('a', 'click', function () {
+            if ($(this).hasClass('btn-info')) {
                 $('#addModal .modal-title').html('修改分类名称');
                 $('#addModal').modal('show');
-              }
-          })      
-      </script>
+            }
+        })
+
+        //进入页面显示
+        $(function () {
+            function load() {
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8080/admin/category/list',
+                    dataType: 'json',
+                    success: function (backData) {
+                        var resHtml = template('class-list', backData);
+                        $('tbody').html(resHtml);
+                    }
+                });
+            };
+            load();
+
+            //新增类别
+            $('#model_add').click(function () {
+                var articleName = $('.articleName').val().trim();
+                var articleSlug = $('.articleSlug').val().trim();
+                var addData = {
+                    name: articleName,
+                    slug: articleSlug
+                };
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/category/add',
+                    data: addData,
+                    success: function (backData) {
+                        if (backData.code == 201) {
+                            alert('新增成功');
+                            $('#addModal').modal('hide');
+                            load();
+                        }
+                    }
+                });
+            });
+
+            //删除类别
+            $('tbody').on('click', '.btn-del', function (e) {
+                e.preventDefault();
+                if (confirm('确认删除吗?')) {
+                    var id = $(this).attr('data-id');
+                    var that = this;
+                    console.log(id);
+
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/delete',
+                        data: {
+                            id: id
+                        },
+                        success: function (backData) {
+                            if (backData.code == 204) {
+                                $(that).parents('tr').remove();
+                            }
+                        }
+                    });
+                }
+            })
+
+        });    
+    </script>
 
 </body>
 
