--- a/web_back/index.html
+++ b/web_back/index.html
@@ -147,7 +147,7 @@
                         url: 'http://localhost:8080/admin/user/logout',
                         success: function (backData) {
                             if (backData.code == 200) {
-                                window.location.href = 'login.html';
+                                window.location.replace('login.html');
                             }
                         }
                     });
