--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -30,11 +32,11 @@
                             <option>爱旅行</option>
                         </select>
                         <select id="selStatus" name="" class="form-control input-sm">
-                            <option>所有状态</option>
-                            <option value="drafted">草稿</option>
-                            <option value="published">已发布</option>
+                            <option value="">所有状态</option>
+                            <option>草稿</option>
+                            <option>已发布</option>
                         </select>
-                        <button id="btnSearch" class="btn btn-default btn-sm">筛选</button>
+                        <button id="btnSearch" class="btn btn-default btn-sm btn-filtrate">筛选</button>
                     </form>
                 </div>
                 <div class="col-xs-6">
@@ -251,7 +253,7 @@
 
             <div class="row text-center">
                 <ul class="pagination pagination-sm">
-                    <li class="page-item first disabled"><a href="#" class="page-link">首页</a></li>
+                    <!-- <li class="page-item first disabled"><a href="#" class="page-link">首页</a></li>
                     <li class="page-item prev disabled"><a href="#" class="page-link">上一页</a></li>
                     <li class="page-item active"><a href="#" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
@@ -261,21 +263,31 @@
                     <li class="page-item"><a href="#" class="page-link">6</a></li>
                     <li class="page-item"><a href="#" class="page-link">7</a></li>
                     <li class="page-item next"><a href="#" class="page-link">下一页</a></li>
-                    <li class="page-item last"><a href="#" class="page-link">尾页</a></li>
+                    <li class="page-item last"><a href="#" class="page-link">尾页</a></li> -->
                 </ul>
             </div>
 
         </div>
     </div>
+
+    <!-- 导入模板引擎 -->
     <script src="./js/template-web.js"></script>
 
-    <script id="article-list" type="text/html">
+    <!-- 文章分类模板 -->
+    <script id="category-list" type="text/html">
+        <option value="">所有分类</option>
+        {{each data v}}
+        <option value="{{v.id}}">{{v.name}}</option>
+        {{/each}}
+    </script>
 
+    <!-- 文章列表模板 -->
+    <script id="article-list" type="text/html">
     {{each data.data v}}
     <tr>            
         <td>{{v.title}}</td>
         <td>{{v.author}}</td>
-        <td>{{v.categoryName}}</td>
+        <td>{{v.category}}</td>
         <td class="text-center">{{v.date}}</td>
         <td class="text-center">{{v.state}}</td>
         <td class="text-center">
@@ -284,7 +296,6 @@
         </td>
     </tr>
     {{/each}}
-
     </script>
     <script>
         // 设置左侧菜单
@@ -292,53 +303,87 @@
             window.parent.setMenu(1, 1);
         });
 
-        // 显示文章
+        //入口函数
         $(function () {
 
-            //获取所有文章类别,以备接下来对照显示类别
+            //请求文章分类
+            //以便接下来使用筛选
             $.ajax({
                 type: 'get',
                 url: 'http://localhost:8080/admin/category/list',
                 dataType: 'json',
-                success: function (backData1) {
-                    if (backData1.code == 200) {
-                        var obj1 = backData1.data;
-                        // console.log(obj1);
-                        
-                        //请求文章
-                        $.ajax({
-                            type: 'get',
-                            url: 'http://localhost:8080/admin/article/query',
-                            dataType: 'json',
-                            data: {
-                                state: '已发布'
-                            },
-                            success: function (backData2) {
-                                if (backData2.code == 200) {
-
-                                    //根据类别id对照所有文章类别生成类别名
-                                    var obj2 = backData2.data.data;
-                                    for (var i = 0; i < obj2.length; i++) {
-                                        for (var j = 0; j < obj1.length; j++) {
-                                            if (obj2[i].categoryId == obj1[j].id) {
-                                                obj2[i].categoryName = obj1[j].name;
-                                                break;
-                                            }
-                                        }
-                                    }
-
-                                    //将完善的数据显示到页面上
-                                    var resHtml = template('article-list', backData2);
-                                    $('tbody').html(resHtml);
-                                }
-                            }
-                        });
-
-                    }
-
-
+                success: function (backData) {
+                    var resHtml = template('category-list', backData);
+                    $('#selCategory').html(resHtml);
                 }
             });
+
+            var myPage = 1;//用来记录总页数,对比判断是否需要重新渲染,打断递归循环
+
+            //请求文章函数
+            function getData(x1, x2, x3) {
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8080/admin/article/query',
+                    dataType: 'json',
+                    data: {
+                        type: x1,//文章种类
+                        state: x2,//文章状态
+                        page: x3,//第几页的文章
+                        perpage: 5//每页显示文章数
+                    },
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            //将数据显示到页面上
+                            var resHtml = template('article-list', backData);
+                            $('tbody').html(resHtml);
+
+                            //重新渲染页码(来源于插件)
+                            var totalPages = backData.data.totalPage;
+                            if (myPage != totalPages || isOk) {
+                                myPage = totalPages;
+                                var currentPage = $pagination.twbsPagination('getCurrentPage');
+                                $pagination.twbsPagination('destroy');
+                                $pagination.twbsPagination($.extend({}, defaultOpts, {
+                                    startPage: 1,
+                                    totalPages: totalPages
+                                }));
+
+                                isOk = false;//重置开关
+                            }
+                        }
+                    }
+                });
+            }
+
+            var artCate;//用来存筛选后的文章种类
+            var artState;//用来存筛选后的文章状态
+            var isOk = false;//设置一个开关用来筛选后页码重新回到第一页
+
+            //点击筛选
+            $('.btn-filtrate').on('click', function (e) {
+                e.preventDefault();
+                artCate = $('#selCategory').val();//文章类型
+                artState = $('#selStatus').val();//文章状态
+                isOk = true;
+                getData(artCate, artState, 1);
+                // $pagination.twbsPagination(defaultOpts);
+            });
+
+            //页码插件
+            var $pagination = $('.pagination');
+            var defaultOpts = {
+                totalPages: 1,//总页数,重新渲染后会改变(可不写)
+                visiblePages: 5,//可见页码数
+                first: '首页',//按钮设置成汉语
+                prev: '上一页',
+                next: '下一页',
+                last: '尾页',
+                onPageClick: function (event, page) {
+                    getData(artCate, artState, page);
+                }//页码点击的回调函数
+            };
+            $pagination.twbsPagination(defaultOpts);//执行插件
         });
     </script>
 
