--- a/web_back/article_release.html
+++ b/web_back/article_release.html
@@ -15,6 +15,7 @@
     <script src="js/jedate/js/jedate.js"></script>
     <script src="js/tinymce/js/tinymce/tinymce.min.js"></script>
     <script src="js/tinymce/js/tinymce_setup.js"></script>
+    <script src="./js/moment.js"></script>
 </head>
 
 <body>
@@ -27,24 +28,23 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章标题：</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="文章标题">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="文章标题" name="title">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">文章封面：</label>
                     <div class="col-sm-10">
-                        <input type="file" id="exampleInputFile">
+                        <img src="" alt="" style="height: 150px; margin-bottom: 10px;">
+                        <input type="file" id="exampleInputFile" name="cover">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章类别：</label>
                     <div class="col-sm-4">
-                        <select class="form-control">
+                        <select class="form-control catList" name="categoryId">
                             <option>1</option>
                             <option>2</option>
                             <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
                         </select>
                     </div>
                 </div>
@@ -53,10 +53,9 @@
                     <div class="col-sm-4">
 
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="YYYY-MM-DD" id="dateinput">
+                            <input type="text" class="form-control" id="dateinput" name="date">
                             <span class="input-group-btn">
-                                <button class="btn btn-default" type="button"
-                                    onclick="jeDate('#dateinput',{trigger:false,format: 'YYYY-MM-DD'})"><i
+                                <button class="btn btn-default btn-date" type="button"><i
                                         class="iconfont icon-icondate"></i></button>
                             </span>
                         </div>
@@ -65,14 +64,14 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="rich_content" name="content" placeholder="文章内容">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda fugiat illo nihil molestias ab. Laborum eius non atque, totam sapiente quae obcaecati assumenda ratione inventore pariatur maiores, qui libero delectus.
-                            </textarea>
+                        <textarea class="form-control" id="rich_content" placeholder="文章内容">
+                            请开始你的表演!
+                        </textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-success">发布</button>
+                        <button type="submit" class="btn btn-success btn-publish">发布</button>
                         <button type="submit" class="btn btn-default">存为草稿</button>
                     </div>
                 </div>
@@ -80,6 +79,85 @@
         </div>
     </div>
 
+    <!-- 导入模板引擎 -->
+    <script src="./js/template-web.js"></script>
+
+    <!-- 所有文章类别模板 -->
+    <script id="category-list" type="text/html">
+    {{each data v}}
+        <option value="{{v.id}}">{{v.name}}</option>
+    {{/each}}
+    </script>
+
+    <script>
+
+        $(function () {
+
+            //获取所有文章分类
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/admin/category/list',
+                dataType: 'json',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        $('select.catList').html(template('category-list', backData));
+                    }
+                }
+            });
+
+            //图片预览
+            $('input#exampleInputFile').on('change', function () {
+                var file = this.files[0];
+                var url = URL.createObjectURL(file);
+                $(this).prev().attr('src', url);
+            });
+
+            //日期插件
+            // onclick="jeDate('#dateinput',{trigger:false,format: 'YYYY-MM-DD'})"
+            $('button.btn-date').on('click', function () {
+                jeDate('input#dateinput',
+                    {
+                        trigger: false,
+                        format: 'YYYY-MM-DD'
+                    })
+            });
+
+            //默认设置为当前日期
+            $('input#dateinput').val(moment().format('YYYY-MM-DD'));
+
+
+            //发布文章
+            $('.btn-publish').on('click', function (e) {
+                e.preventDefault();
+                var fd = new FormData($('form')[0]);
+                fd.append('content', tinyMCE.activeEditor.getContent());
+                fd.append('state', '已发布');
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/article/publish',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        if (backData.code == 200) {
+                            alert('新增成功');
+                            window.location.reload();
+                        }
+                    }
+                });
+
+            });
+
+
+        });
+
+        //移除右下链接
+        window.onload = function () {
+            $('#mceu_45').remove();
+        }
+
+    </script>
 </body>
 
 </html>
